--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<h1>Hello world</h1>
-<p>I'm Paulo and I attend the Craft Academy Bootcamp.</p>
+<!DOCTYPE html>
+
+<html>
+
+  <head>
+    <meta http-equiv="Content.Type" content="text/html; charset=UTF-8" />
+    <title>My First website</title>
+  </head>
+
+  <body>
+    <h1>Hello world</h1>
+    <p>I'm Paulo and i attend the Craft Academy Bootcamp.</p>
+  </body>
+
+</html>
