--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Hello world</h1>
     <p>I'm Paulo and i attend the Craft Academy Bootcamp.</p>
+    <p>Adding a second line</p>
   </body>
 
 </html>
