--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 
 <html>
 
   <head>
     <meta http-equiv="Content.Type" content="text/html; charset=UTF-8" />
     <title>My First website</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
