added a picture to the index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html>
 
@@ -12,6 +12,7 @@
     <h1>Hello world</h1>
     <p>I'm Paulo and i attend the Craft Academy Bootcamp.</p>
     <p>Adding a second line</p>
+    <img src="images/coronaemoji.jpg" alt="coronaemoji">
   </body>
 
 </html>
