--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <head>
     <meta http-equiv="Content.Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First website</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
