added navbar in index.html, tab1.html, tab2.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
   <body>
     <h1>Hello world</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Startpage</a></li>
+        <li><a href="tab1.html">Tab 1</a></li>
+        <li><a href="tab2.html">Tab 2</a></li>
+      </ul>
+    </nav>
     <p>I'm Paulo and i attend the Craft Academy Bootcamp.</p>
     <p>Adding a second line</p>
     <img src="images/coronaemoji.jpg" alt="coronaemoji">
