--- a/tab1.html
+++ b/tab1.html
@@ -9,6 +9,13 @@
 
   <body>
     <h1>This is tab 1</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Startpage</a></li>
+        <li><a href="tab1.html">Tab 1</a></li>
+        <li><a href="tab2.html">Tab 2</a></li>
+      </ul>
+    </nav>
     <img src="images/coronaemoji.jpg" alt alternative text to the picture>
     <p>This is a nice picture</p>
   </body>
