--- a/tab2.html
+++ b/tab2.html
@@ -10,6 +10,13 @@
 
   <body>
     <h1>This is Tab 2</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Startpage</a></li>
+        <li><a href="tab1.html">Tab 1</a></li>
+        <li><a href="tab2.html">Tab 2</a></li>
+      </ul>
+    </nav>
     <p>In order to create more files to the page, this is page 2 witch will be tab 2 in the navbar</p>
   </body>
 </html>
